--- a/static/css/book_detail.css
+++ b/static/css/book_detail.css
@@ -23,9 +23,9 @@
     top: 440px;
 }
 .book_detail_line{
-width: 550px;
-height: 0px;
-border: 1px solid #A8A8A8;
+    width: 550px;
+    height: 0px;
+    border: 1px solid #A8A8A8;
 }
 .all_detail{
     position: absolute;
@@ -49,6 +49,7 @@ border: 1px solid #A8A8A8;
     text-align: right;
     color: #484848;
 }
+/*
 input[type='radio'],
 input[type='radio']:checked {
   appearance: none;
@@ -79,7 +80,7 @@ input[type='radio']:checked {
 }
 .radio_label.indent{
     padding-right:100px;
-}
+}*/
 .all_radio{
     padding-left:15px;
     padding-top:20px;
@@ -100,24 +101,11 @@ button:focus {
 input:focus {
     outline: none;
 }
-.black_overlay{
-    display: none;
-    position: absolute;
-    top: 0%;
-    left: 0%;
-    width: 100%;
-    height: 100%;
-    background-color: black;
-    z-index:1001;
-    -moz-opacity: 0.8;
-    opacity:.80;
-    filter: alpha(opacity=80);
-}
 .white_content {
     display: none;
     position: absolute;
     top: 50%;
-    left: 25%;
+    left: 15%;
     width: 299px;
     height: 115px;
     padding: 16px;
@@ -136,8 +124,8 @@ input:focus {
     position: absolute;
     width: 377.71px;
     height: 35px;
-    left: 535px;
-    top: 950px;
+    left: -480px;
+    top: 500px;
     font-family: NanumGothic;
     font-style: normal;
     font-weight: bold;
@@ -153,8 +141,8 @@ input:focus {
     position: absolute;
     width: 490px;
     height: 45px;
-    left: 383px;
-    top: 1000px;
+    left: -620px;
+    top: 540px;
     background: #FF8C38;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 20px;
@@ -171,9 +159,92 @@ input:focus {
 }
 .btn_update_delete{
     position: absolute;
-    left: 1000px;
-    top: 1000px;
+    left: 0px;
+    top: 500px;
 
+}
+.state_btn {
+    display: inline-block;
+    position: relative;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    text-align: center;
+    color: #7A7A7A;
+}
+/* Hide the browser's default radio button */
+.state_btn input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+}
+
+/* Create a custom radio button */
+.checkmark {
+    display: block;
+    background-color: white;
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    z-index: 10;
+}
+
+/* On mouse-over, add a grey background color */
+.state_btn:hover input~.checkmark {
+    background-color: #ccc;
+}
+
+/* When the radio button is checked, add a blue background */
+.state_btn input:checked + .gradation1 {
+    background-color: #945AA9;
+}
+.state_btn input:checked +.gradation2 {
+    background-color: #AA6287;
+}
+.state_btn input:checked +.gradation3 {
+    background-color: #CC6F51;
+}
+.state_btn input:checked +.gradation4 {
+    background-color: #FF8301;
+}
+
+.gradation1 {
+    border:solid #945AA9 6px;
+}
+
+.gradation2 {
+    border:solid #AA6287 6px;
+}
+
+.gradation3 {
+    border:solid #CC6F51 6px;
+}
+
+.gradation4 {
+    border:solid #FF8301 6px;
+}
+
+.gradation_line{
+    background: linear-gradient(to right, #945AA9, #AA6287, #CC6F51, #FF8301);
+    height:6px;
+    width:99%;
+    position:absolute;
+    z-index: 0;
+}
+
+.state{
+    margin-left: 10px;
+    width:369px;
+    display:flex;
+    justify-content: space-between;
+    position:relative;
 }
 
 
