--- a/static/css/book_list.css
+++ b/static/css/book_list.css
@@ -86,6 +86,28 @@
     line-height: 29px;
     color: #FFFFFF;
 }
+input[type="checkbox"]+label{
+    width: 200px;
+    height: 50px;
+    background: url('../img/not_check.png') no-repeat 0 0px / contain;
+}
+input[type='checkbox']:checked+label{
+  background: url('../img/check.png') no-repeat 0 0px / contain;
+}
+input[type="checkbox"] {
+    display: none;
+}
+
+.free_filter{
+padding-right: 10px;
+
+
+
+}
+.deal_filter{
+
+
+}
 table{
    position: absolute;
    left: 290px;
@@ -141,5 +163,38 @@ input:focus {
     outline: none;
 }
 .form-check-input{
-margin-left:10px;
+    margin-left:10px;
+}
+.btn_stated{
+    border: 0;
+    outline:0;
+    background-color: #FFFFFF;
+}
+.btn_closed_state{
+    border: 0;
+    outline:0;
+    background-color: #FFFFFF;
+}
+.list_state_content {
+    display: none;
+    position: absolute;
+    top: 0%;
+    left: 64%;
+    padding: -20px;
+    width: 250px;
+    height: 111px;
+    border: 0px solid black;
+    box-shadow: 0px 0px 20px 2px rgba(0, 0, 0, 0.25);
+    background-color: white;
+    z-index:1002;
+    overflow: auto;
+}
+.state_box_text2{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    float: left;
+}
+button:focus {
+    outline: none;
 }
