--- a/templates/book/book_list.html
+++ b/templates/book/book_list.html
@@ -15,7 +15,6 @@ function changeMajorSelect(){
     var major1 = "major1"
     var major2 = "major2"
     var major3 = "major3"
-
     if (selectValue == all){
         var url = '{% url 'book:index' %}';
         window.location.href = url;
@@ -33,6 +32,15 @@ function changeMajorSelect(){
 }
 function changeFilter(){
     document.getElementById("hidden-form-submit").click();
+}
+function show_box(){
+    document.getElementById('state_detail2').style.display='block';
+    document.getElementById('fade').style.display='block';
+}
+
+function close_box(){
+    document.getElementById('state_detail2').style.display='none';
+    document.getElementById('fade').style.display='none';
 }
 </script>
 
@@ -55,33 +63,64 @@ function changeFilter(){
     </select>
     </form>
     <hr id="line_major_bar">
+
     <form action="{% url 'book:index' %}" method="get" id="filter-form">
         <div class="filtering-box">
             {% if "free" in search_type %}
-            <input class="form-check-input" type="checkbox" checked value="free" name="search-type" onchange="changeFilter()"> 무료나눔
+            <span class="free_filter">
+                <input class="form-check-input" type="checkbox" checked value="free" name="search-type" onchange="changeFilter()" id="free1">
+                <label for="free1">무료나눔</label>
+            </span>
             {% endif %}
             {% if "free" not in search_type %}
-            <input class="form-check-input" type="checkbox" value="free" name="search-type" onchange="changeFilter()" >  무료나눔
+            <span class="free_filter">
+                <input class="form-check-input" type="checkbox" value="free" name="search-type" onchange="changeFilter()" id="free2">
+                <label for="free2">무료나눔</label>
+            </span>
             {% endif %}
             {% if "deal" in search_type %}
-            <input class="form-check-input" type="checkbox"  checked value="deal" name="search-type"  onchange="changeFilter()" > 거래중
+            <span class="deal_filter">
+                <input class="form-check-input" type="checkbox"  checked value="deal" name="search-type"  onchange="changeFilter()" id="deal1">
+                <label for="deal1"> 거래중 </label>
+            </span>
             {% endif %}
             {% if "deal" not in search_type %}
-             <input class="form-check-input" type="checkbox"  value="deal" name="search-type"  onchange="changeFilter()" > 거래중
+            <span class="deal_filter">
+                <input class="form-check-input" type="checkbox"  value="deal" name="search-type"  onchange="changeFilter()" id="deal2">
+                <label for="deal2"> 거래중 </label>
+            </span>
             {% endif %}
-        </div>
+
         <button id="hidden-form-submit" type="submit" hidden>제출</button>
+        </div>
     </form>
+
 
 <table id="book_table">
     <thead>
         <th>사진</th>
         <th>제목(저자)</th>
         <th>학과+수업</th>
-        <th>상태</th>
+        <th>
+            상태
+            <button class="btn_stated" onclick="show_box()"> <img src="{% static 'img/state_standard.png' %}" alt="" height="19" width="19"> </button>
+            <div class="state_box">
+              <div id="state_detail2" class="list_state_content">
+                  <span style="font-weight: bold; font-size: 14px;"> BooKU 도서 상태 기준 안내</span><button class="btn_closed_state" onclick="close_box()"><img src="{% static 'img/state_standard.png' %}" alt="" height="19" width="19"></button>
+                  <div class="state_box_text2" align="left" >
+                      <span style="font-weight: bold;"> 최상:</span> 새것과 같은 상태 <br>
+                      <span style="font-weight: bold;"> 상:</span> 약간의 필기감 <br>
+                      <span style="font-weight: bold;"> 보통:</span> 헌 부분 있음, 필기감, 사용감 있음 <br>
+                      <span style="font-weight: bold;"> 하:</span> 찢김, 심한 낙서, 페이지 유실
+                  </div>
+              </div>
+            </div>
+        </th>
+
         <th>가격</th>
         <th>거래가능</th>
     </thead>
+
     <tbody>
         {% if object_list %}
             {% for object in object_list %}
