--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -96,6 +96,23 @@ input[type="date"]{
     padding-left:1rem;
 }
 
+#email_field{
+    overflow: hidden;
+}
+
+#email{
+    width:70%;
+    padding-right:0;
+    float:left;
+    border-radius: 10px 0 0 10px;
+}
+
+#domain{
+    width:30%;
+    border-radius: 0 10px 10px 0;
+    float:left;
+}
+
 
 .university {
     overflow: hidden;
