--- a/templates/user/password_reset_confirm.html
+++ b/templates/user/password_reset_confirm.html
@@ -5,6 +5,10 @@
 {% endblock %}
 {% block content %}
 <div class="content">
+    {% if title %}
+    <h2>비밀번호 초기화를 실패하였습니다.</h2>
+    <p>비밀번호 초기화 링크가 이미 사용되어 올바르지 않습니다. 비밀번호 초기화를 다시 해주세요.</p>
+    {% else %}
     <form method="post">
         {% csrf_token %}
         <h3>비밀번호 재설정</h3>
@@ -15,5 +19,6 @@
         <input type="password" name="new_password2" id="new_password2">
         <button type="submit" class="">변경하기</button>
     </form>
+    {% endif %}
 </div>
 {% endblock %}
