--- a/static/css/book_detail.css
+++ b/static/css/book_detail.css
@@ -159,10 +159,27 @@ input:focus {
 }
 .btn_update_delete{
     position: absolute;
-    left: 0px;
+    left: 30%;
     top: 500px;
 
 }
+.btn{
+    background: #FF8C38;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
+    font-family: NanumGothic;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 35px;
+    /* identical to box height, or 146% */
+    text-align: center;
+    color: #FFFFFF;
+    border: 0;
+    outline:0;
+}
+
+
 .state_btn {
     display: inline-block;
     position: relative;
