--- a/static/css/book_list.css
+++ b/static/css/book_list.css
@@ -43,6 +43,9 @@
     align-items: center;
     color: #7B7B7B;
 }
+form input{
+    padding-left:20px;
+}
 .btn_search{
       position: absolute;
       width: 42.11px;
@@ -73,19 +76,15 @@
 }
 .filtering-box{
     position: absolute;
+    display: inline-block;
     width: 100%;
     height: 60px;
     left: 0px;
     top: 310px;
     border:1px solid #FF9F46;
     background: #FF9F46;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 29px;
-    color: #FFFFFF;
 }
+
 input[type="checkbox"]+label{
     width: 200px;
     height: 50px;
@@ -99,14 +98,52 @@ input[type="checkbox"] {
 }
 
 .free_filter{
-padding-right: 10px;
-
-
-
+    display: inline-block;
+    width: 200px;
+    height: 60px;
 }
 .deal_filter{
+    display: inline-block;
+    width: 200px;
+    height: 60px;
+}
+.filter-txt{
+    font-family: Inter;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 30px;
+    line-height: 29px;
+    color: #FFFFFF;
+    position: absolute;
+    left:20%;
+    top:13px;
+}
+.free-label{
+    position: absolute;
+    left:35%;
+    top:5px;
+    padding-left:60px;
+    padding-top: 10px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 29px;
+    color: #FFFFFF;
+}
 
-
+.deal-label{
+    position: absolute;
+    left:50%;
+    top:5px;
+    padding-left:60px;
+    padding-top: 10px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 29px;
+    color: #FFFFFF;
 }
 table{
    position: absolute;
@@ -145,7 +182,6 @@ td:nth-child(1){
 td:nth-child(2){
     width:250px;
     text-align:left;
-
 }
 td:nth-child(3){
     width:290px;
@@ -180,7 +216,7 @@ input:focus {
     position: absolute;
     top: 0%;
     left: 64%;
-    padding: -20px;
+    padding: 5px;
     width: 250px;
     height: 111px;
     border: 0px solid black;
@@ -197,4 +233,32 @@ input:focus {
 }
 button:focus {
     outline: none;
+}
+
+.no_search{
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 36px;
+    line-height: 80px;
+    /* or 222% */
+    text-align: center;
+    color: #757575;
+    height: 50px;
+    position: absolute;
+    width: 750px;
+    left: 30%;
+    top: 50%;
+    text-align-last: center;
+
+}
+.search_word{
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 36px;
+    line-height: 80px;
+    /* or 222% */
+    text-align: center;
+    color: #757575;
 }
