--- a/templates/book/book_major1_list.html
+++ b/templates/book/book_major1_list.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block content %}
 
-<script type="text/javascript">
+<script type="text/javascript" >
 function changeMajorSelect(){
     var selectBox = document.getElementById("up_category_menu");
     var selectValue = selectBox.options[selectBox.selectedIndex].value;
@@ -34,6 +34,15 @@ function changeMajorSelect(){
 function changeFilter(){
     document.getElementById("hidden-form-submit").click();
 }
+function show_box(){
+    document.getElementById('state_detail2').style.display='block';
+    document.getElementById('fade').style.display='block';
+}
+
+function close_box(){
+    document.getElementById('state_detail2').style.display='none';
+    document.getElementById('fade').style.display='none';
+}
 </script>
 
 <div class="container">
@@ -56,80 +65,91 @@ function changeFilter(){
     </form>
     <hr id="line_major_bar">
     <form action="{% url 'book:major1' %}" method="get" id="filter-form">
-        <div class="filtering-box">
+        <div class="filtering-box"> <span class="filter-txt"> 필터링 </span>
             {% if "free" in search_type %}
             <span class="free_filter">
                 <input class="form-check-input" type="checkbox" checked value="free" name="search-type" onchange="changeFilter()" id="free1">
-                <label for="free1">무료나눔</label>
+                <label for="free1" class="free-label">무료나눔</label>
             </span>
             {% endif %}
             {% if "free" not in search_type %}
             <span class="free_filter">
                 <input class="form-check-input" type="checkbox" value="free" name="search-type" onchange="changeFilter()" id="free2">
-                <label for="free2">무료나눔</label>
+                <label for="free2" class="free-label">무료나눔</label>
             </span>
             {% endif %}
             {% if "deal" in search_type %}
             <span class="deal_filter">
                 <input class="form-check-input" type="checkbox"  checked value="deal" name="search-type"  onchange="changeFilter()" id="deal1">
-                <label for="deal1"> 거래중 </label>
+                <label for="deal1" class="deal-label"> 거래중 </label>
             </span>
             {% endif %}
             {% if "deal" not in search_type %}
              <span class="deal_filter">
                 <input class="form-check-input" type="checkbox"  value="deal" name="search-type"  onchange="changeFilter()" id="deal2">
-                <label for="deal2"> 거래중 </label>
+                <label for="deal2" class="deal-label"> 거래중 </label>
             </span>
             {% endif %}
         </div>
         <button id="hidden-form-submit" type="submit" hidden>제출</button>
     </form>
 
-<table id="book_table">
-    <thead>
-        <th>사진</th>
-        <th>제목(저자)</th>
-        <th>학과+수업</th>
-        <th>상태</th>
-        <th>가격</th>
-        <th>거래가능</th>
-    </thead>
-    <tbody>
-        {% if object_list %}
-            {% for object in object_list %}
-                <tr class="tabel_row" onclick="location.href='{% url 'book:detail' object.id %}'">
-                    <td><a href="{% url 'book:detail' object.id %}">
-                        {% if object.image.url != "" %}
-                            <img src=" {{ object.image.url }}" class="book_list_img" alt="..." height="94px" width="99px">
-                        {% endif %}
-                        </a>
-                    </td>
-                    <td><div style="font-size: 22px;">{{ object.title|truncatechars:30 }}</div> <br> <div style="font-weight: normal;"> 저자: {{ object.writer }}</div> </td>
-                    <td> <div style="font-weight: normal;">{{ object.major_category }}</div> <br> <div style="font-size: 21px;"> {{ object.lecture }}</div> </td>
-                    <td> {{ object.state }}  </td>
-                    <td>
-                        {% if object.price == 0 %}
-                            무료나눔
-                        {% else %}
-                            {{ object.price }}₩
-                        {% endif %}
-                    </td>
-                    <td>
-                        {% if object.deal_flag == 1 %} 거래중 {% endif %}
-                        <div style="color:#ADADAD;">{% if object.deal_flag == 0 %} 거래완료 {% endif %}</div>
 
-                    </td>
-                </tr>
-            {% endfor %}
-        {% else %}
-        <tr class="text-center">
-            <td colspan="5">
-                작성된 게시글이 없습니다.
-            </td>
-        </tr>
-        {% endif %}
-    </tbody>
-    </table>
+    {% if object_list %}
+        <table id="book_table">
+            <thead>
+                <th>사진</th>
+                <th>제목(저자)</th>
+                <th>학과+수업</th>
+                <th>
+                    상태
+                    <button class="btn_stated" onclick="show_box()"> <img src="{% static 'img/state_standard.png' %}" alt="" height="19" width="19"> </button>
+                    <div class="state_box">
+                      <div id="state_detail2" class="list_state_content">
+                          <span style="font-weight: bold; font-size: 14px;"> BooKU 도서 상태 기준 안내</span><button class="btn_closed_state" onclick="close_box()"><img src="{% static 'img/state_standard.png' %}" alt="" height="19" width="19"></button>
+                          <div class="state_box_text2" align="left" style="padding-left: -10px;" >
+                              <span style="font-weight: bold;"> 최상:</span> 새것과 같은 상태 <br>
+                              <span style="font-weight: bold;"> 상:</span> 약간의 필기감 <br>
+                              <span style="font-weight: bold;"> 보통:</span> 헌 부분 있음, 필기감, 사용감 있음 <br>
+                              <span style="font-weight: bold;"> 하:</span> 찢김, 심한 낙서, 페이지 유실
+                          </div>
+                      </div>
+                    </div>
+                </th>
+                <th>가격</th>
+                <th>거래가능</th>
+            </thead>
+            <tbody>
+                    {% for object in object_list %}
+                        <tr class="tabel_row" onclick="location.href='{% url 'book:detail' object.id %}'">
+                            <td><a href="{% url 'book:detail' object.id %}">
+                                {% if object.image.url != "" %}
+                                    <img src=" {{ object.image.url }}" class="book_list_img" alt="..." height="94px" width="99px">
+                                {% endif %}
+                                </a>
+                            </td>
+                            <td><div style="font-size: 22px;">{{ object.title|truncatechars:30 }}</div> <br> <div style="font-weight: normal;"> 저자: {{ object.writer }}</div> </td>
+                            <td> <div style="font-weight: normal;">{{ object.major_category }}</div> <br> <div style="font-size: 21px;"> {{ object.lecture }}</div> </td>
+                            <td> {{ object.state }}  </td>
+                            <td>
+                                {% if object.price == 0 %}
+                                    무료나눔
+                                {% else %}
+                                    {{ object.price }}₩
+                                {% endif %}
+                            </td>
+                            <td>
+                                {% if object.deal_flag == 1 %} 거래중 {% endif %}
+                                <div style="color:#ADADAD;">{% if object.deal_flag == 0 %} 거래완료 {% endif %}</div>
+
+                            </td>
+                        </tr>
+                    {% endfor %}
+            </tbody>
+            </table>
+    {% else %}
+        <div class="no_search"> 작성된 글이 없습니다 </div>
+    {% endif %}
 </div>
 <!--
     {% if is_paginated %}
