--- a/templates/book/book_update.html
+++ b/templates/book/book_update.html
@@ -4,6 +4,45 @@
 <link rel="stylesheet" type="text/css" href="{% static 'css/book_update.css' %}">
 {% endblock %}
 {% block content %}
+<script language="JavaScript">
+    function free1(){
+        var chk = document.getElementById("free_btn1").checked;
+        var form = document.getElementById("form_update");
+
+        if(chk){
+            document.getElementById("id_price").value = 0;
+            form.price.value = 0;
+            form.price.focus();
+            document.getElementById("id_price").readOnly = true;
+        }
+        if(!chk){
+            document.getElementById("id_price").value = "";
+            document.getElementById("id_price").readOnly = false;
+        }
+    }
+    function free2(){
+        var chk = document.getElementById("free_btn2").checked;
+        var form = document.getElementById("form_update");
+
+        if(chk){
+            document.getElementById("id_price").value = 0;
+            form.price.value = 0;
+            form.price.focus();
+            document.getElementById("id_price").readOnly = true;
+        }
+        if(!chk){
+            document.getElementById("id_price").value = "";
+            document.getElementById("id_price").readOnly = false;
+        }
+    }
+    function checkReadOnly(){
+        var price = document.getElementById('id_price').value;
+
+        if(price == 0){
+            document.getElementById("id_price").readOnly = true;
+        }
+    }
+</script>
 <div class="content">
     <h2>
         도서 정보 수정
@@ -12,44 +51,41 @@
     <form class="form_update" id="form_update" action="" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <!--{{form.as_p}}-->
-        {% for field in form %}
         {% include "form_errors.html" %}
-        <div class="rows">
-            {% if field == form.title %}
+            <div class="rows">
                 <div class="col1">
-                    <input type="text" class="book_title_input text_input" name="title" value="{{ update_book.title }}" required id ="id_title">
+                    <input type="text" class="book_title_input text_input" name="title" value="{{ update_book.title }}" required id ="id_title" autocomplete="off">
                 </div>
-            {% endif %}
-            {% if field == form.writer %}
                 <div class="col2">
-                    <input type="text" class="book_writer_input text_input" name="writer" value="{{ update_book.writer }}" required id ="id_writer">
+                    <input type="text" class="book_writer_input text_input" name="writer" value="{{ update_book.writer }}" required id ="id_writer" autocomplete="off">
                 </div>
-            {% endif %}
-        </div>
-
-        <div class="rows">
-            <div class="col1">
-                {% if field == form.major_category %}
+            </div>
+            <div class="rows">
                 {% if update_book.major_category == '전체' %}
-                    <label for="id_major1" >{{ field.label_tag }}</label>
-                    <select name="major_category" form="form_update" id="id_major1">
-                        <option value="전체" selected >전체</option>
-                        <optgroup label="원전공">
-                            <option value="{{user.first_major}}"> {{user.first_major}} </option>
-                        </optgroup>
-                        <optgroup label="다/부전공">
-                            {% if user.second_major != "" %}
-                                <option value="{{user.second_major}}"> {{user.second_major}} </option>
-                            {% endif %}
-                            {% if user.third_major != "" %}
-                                <option value="{{user.third_major}}"> {{user.third_major}} </option>
-                            {% endif %}
-                        </optgroup>
-                    </select>
+                    <div class="col1">
+                        <label for="id_major 1" >전공 카테고리</label>
+                        <select name="major_category" form="form_update" id="id_major 1" class="cr_major">
+                            <option value="전체" selected >전체</option>
+                            <optgroup label="원전공">
+                                <option value="{{user.first_major}}"> {{user.first_major}} </option>
+                            </optgroup>
+                            <optgroup label="다/부전공">
+                                {% if user.second_major != "" %}
+                                    <option value="{{user.second_major}}"> {{user.second_major}} </option>
+                                {% endif %}
+                                {% if user.third_major != "" %}
+                                    <option value="{{user.third_major}}"> {{user.third_major}} </option>
+                                {% endif %}
+                            </optgroup>
+                        </select>
+                    </div>
+
                 {% endif %}
                 {% if update_book.major_category == user.first_major %}
-                    <label for="id_major2" >{{ field.label_tag }}</label>
-                    <select name="major_category" form="form_update" id="id_major2">
+
+                <div class="col1">
+                    <label for="id_major 2" >전공 카테고리</label>
+                    <select name="major_category" form="form_update" id="id_major 2" class="cr_major">
                         <option value="전체" selected>전체</option>
                         <optgroup label="원전공">
                             <option value="{{user.first_major}}" selected> {{user.first_major}} </option>
@@ -63,10 +99,14 @@
                             {% endif %}
                         </optgroup>
                     </select>
+                </div>
+
                 {% endif %}
                 {% if update_book.major_category == user.second_major %}
-                    <label for="id_major3" >{{ field.label_tag }}</label>
-                    <select name="major_category" form="form_update" id="id_major3">
+
+                <div class="col1">
+                    <label for="id_major 3" >전공 카테고리</label>
+                    <select name="major_category" form="form_update" id="id_major 3" class="cr_major">
                         <option value="전체" selected>전체</option>
                         <optgroup label="원전공">
                             <option value="{{user.first_major}}"> {{user.first_major}} </option>
@@ -80,10 +120,14 @@
                             {% endif %}
                         </optgroup>
                     </select>
+                </div>
+
                 {% endif %}
                 {% if update_book.major_category == user.third_major %}
-                    <label for="id_major4" >{{ field.label_tag }}</label>
-                    <select name="major_category" form="form_update" id="id_major4">
+
+                <div class="col1">
+                    <label for="id_major 4" >전공 카테고리</label>
+                    <select name="major_category" form="form_update" id="id_major 4" class="cr_major">
                         <option value="전체" selected>전체</option>
                         <optgroup label="원전공">
                             <option value="{{user.first_major}}"> {{user.first_major}} </option>
@@ -97,76 +141,162 @@
                             {% endif %}
                         </optgroup>
                     </select>
+                </div>
+
                 {% endif %}
-            {% endif %}
-            </div>
             <div class="col2">
-                {% if field == form.lecture %}
-                    <label for="id_lecture" id="book_lecture">{{ field.label_tag }}</label><br><br>
+                    <label for="id_lecture" id="book_lecture">수업</label>
                     <input type="text" class="book_lecture_input text_input" name="lecture" value="{{ update_book.lecture }}" required id ="id_lecture">
-                {% endif %}
             </div>
-        </div>
+            </div>
 
         <div class="rows">
-            {% if field == form.state %}
-                <label id="book_state">{{ field.label_tag }}</label><br><br>
+                <label id="book_state">도서 상태</label>
                 {% if update_book.state == '하' %}
-                <input type="radio" name="state" value="하" checked >하
-                <input type="radio" name="state" value="보통" >보통
-                <input type="radio" name="state" value="상">상
-                <input type="radio" name="state" value="최상">최상
+                <div class="state">
+                <hr class="gradation_line">
+                <label class="state_btn">
+                    <input type="radio" name="state" value="하" checked>
+                    <span class="checkmark gradation1"></span>
+                    하
+                </label>
+                <label class="state_btn">
+                    <input type="radio" name="state" value="보통" >
+                    <span class="checkmark gradation2"></span>
+                    보통
+                </label>
+                <label class="state_btn">
+                    <input type="radio" name="state" value="상" >
+                    <span class="checkmark gradation3"></span>
+                    상
+                </label>
+                <label class="state_btn">
+                    <input type="radio" name="state" value="최상" >
+                    <span class="checkmark gradation4"></span>
+                    최상
+                </label>
+                </div>
                 {% endif %}
                 {% if update_book.state == '보통' %}
-                <input type="radio" name="state" value="하">하
-                <input type="radio" name="state" value="보통" checked>보통
-                <input type="radio" name="state" value="상">상
-                <input type="radio" name="state" value="최상">최상
+                <div class="state">
+                <hr class="gradation_line">
+                <label class="state_btn">
+                    <input type="radio" name="state" value="하">
+                    <span class="checkmark gradation1"></span>
+                    하
+                </label>
+                <label class="state_btn">
+                    <input type="radio" name="state" value="보통" checked>
+                    <span class="checkmark gradation2"></span>
+                    보통
+                </label>
+                <label class="state_btn">
+                    <input type="radio" name="state" value="상" >
+                    <span class="checkmark gradation3"></span>
+                    상
+                </label>
+                <label class="state_btn">
+                    <input type="radio" name="state" value="최상" >
+                    <span class="checkmark gradation4"></span>
+                    최상
+                </label>
+                </div>
                 {% endif %}
                 {% if update_book.state == '상' %}
-                <input type="radio" name="state" value="하">하
-                <input type="radio" name="state" value="보통">보통
-                <input type="radio" name="state" value="상" checked>상
-                <input type="radio" name="state" value="최상">최상
+                <div class="state">
+                <hr class="gradation_line">
+                <label class="state_btn">
+                    <input type="radio" name="state" value="하" >
+                    <span class="checkmark gradation1"></span>
+                    하
+                </label>
+                <label class="state_btn">
+                    <input type="radio" name="state" value="보통" >
+                    <span class="checkmark gradation2"></span>
+                    보통
+                </label>
+                <label class="state_btn">
+                    <input type="radio" name="state" value="상" checked>
+                    <span class="checkmark gradation3"></span>
+                    상
+                </label>
+                <label class="state_btn">
+                    <input type="radio" name="state" value="최상" >
+                    <span class="checkmark gradation4"></span>
+                    최상
+                </label>
+                </div>
                 {% endif %}
                 {% if update_book.state == '최상' %}
-                <input type="radio" name="state" value="하">하
-                <input type="radio" name="state" value="보통">보통
-                <input type="radio" name="state" value="상">상
-                <input type="radio" name="state" value="최상" checked>최상
+                <div class="state">
+                <hr class="gradation_line">
+                <label class="state_btn">
+                    <input type="radio" name="state" value="하" >
+                    <span class="checkmark gradation1"></span>
+                    하
+                </label>
+                <label class="state_btn">
+                    <input type="radio" name="state" value="보통" >
+                    <span class="checkmark gradation2"></span>
+                    보통
+                </label>
+                <label class="state_btn">
+                    <input type="radio" name="state" value="상" >
+                    <span class="checkmark gradation3"></span>
+                    상
+                </label>
+                <label class="state_btn">
+                    <input type="radio" name="state" value="최상" checked>
+                    <span class="checkmark gradation4"></span>
+                    최상
+                </label>
+                </div>
                 {% endif %}
-            {% endif %}
+        </div>
+        <div class="rows">
+                <label for="id_price" id="book_price">가격</label>
+                <div>
+                <input type="number" min="0" class="book_price_input text_input" name="price" value="{{ update_book.price }}" required id ="id_price">
+                <label class="free_btn">
+                    {% if update_book.price == 0 %}
+                        <input class="book_price_input freebox" id="free_btn1" name="freebox" onchange="free1()" type="checkbox" checked >
+                        <span class="checkmark2"></span>무료나눔
+                    {% else %}
+                        <input class="book_price_input freebox" id="free_btn2" name="freebox" onchange="free2()" type="checkbox" >
+                        <span class="checkmark2"></span>무료나눔
+                    {% endif %}
+                </label>
+                </div>
+        </div>
+        <div class="rows">
+            <label>사진</label>
+            <div class="col3">
+                <div class="book_image" >
+                    {{ form.image }}
+                </div>
+            </div>
 
-
-            {% if field == form.text %}
+            <label><br>게시글</label>
+            <div class="col4">
+            <div class="book_text">
                 <textarea name="text" class="book_text_input" form="form_update" cols="40" rows="5" required id="id_text">{{ update_book.text }}</textarea>
-                <!-- <input type="text" class="post_text_input" name="text" value="{{ update_post.text }}" required id ="id_text">-->
-            {% endif %}
-            {% if field == form.image %}
-                <label id="book_image">{{ field.label_tag }}</label>
-                <div class="book_image_input">{{ field }}</div>
-            {% endif %}
-
-
-            {% if field == form.price %}
-                <label for="id_price" id="book_price">{{ field.label_tag }}</label><br><br>
-                <input type="number" min="0" class="book_price_input" name="price" value="{{ update_book.price }}" required id ="id_price">
-            {% endif %}
-            {% if field == form.kakaoUrl %}
-                <label for="id_lecture" id="book_kakaoUrl">{{ field.label_tag }}</label><br><br>
-                <input type="url" class="book_kakaoUrl_input" name="kakaoUrl" value="{{ update_book.kakaoUrl }}" required id ="id_kakaoUrl">
-            {% endif %}
-
-
+            </div>
+            </div>
+        </div>
+        <div class="rows">
+                <label for="id_chatting" id="book_chattingl">오픈채팅 주소</label>
+                <input type="url" class="book_chatting_input text_input" name="kakaoUrl" value="{{ update_book.kakaoUrl }}" required id ="id_chatting">
+        </div>
             {% if field.errors %}
                 {% for e in field.errors %}
                     <p style="color:palevioletred;">{{ e | escape }}</p>
                 {% endfor %}
             {% endif %}
-        {% endfor %}
-        <input type="submit" value="완료">
-            <div><button onclick ="location.href='{% url 'book:index' %}'" class="btn_book_delete">취소</button></div>
+        <div class="btns">
+            <input type="submit" value="수정하기" class="btn_book_reupload btn">
+            <button type="button" onclick="location.href='{% url 'book:index' %}'"
+                class="btn_book_unload btn">취소</button>
         </div>
     </form>
-  </div>
+</div>
 {% endblock %}
