UPDATE book_create.css, views

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -53,3 +53,11 @@ button{
     text-align: center;
     color:white;
 }
+
+button:focus{
+    outline: none;
+}
+
+button:hover{
+    font-weight: 900;
+}
