--- a/static/css/book_create.css
+++ b/static/css/book_create.css
@@ -1,23 +1,6 @@
 .content {
-    width: 750px;
-    margin: 20px auto  50px;
-}
-
-h2 {
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 36px;
-    color: #4A4A4A;
-    margin-bottom: 30px;
-}
-
-h2>hr {
-    margin-left: 0;
-    width: 40px;
-    height: 2.5px;
-    background: #4A4A4A;
-    border-radius: 4px;
+    width: 46rem;
+    margin: auto;
 }
 
 .rows {
@@ -29,20 +12,19 @@ h2>hr {
 .col1 {
     float: left;
     width: 50%;
+    padding-right:0.5rem;
 }
 
 .col2 {
     float: right;
-    width: fit-content;
+    width: 50%;
+    padding-left:0.5rem;
 }
 
 label {
     display: block;
-    font-family: Inter;
-    font-style: normal;
     font-weight: 600;
-    font-size: 22px;
-
+    font-size: 1.4rem;
     color: #5C5C5C;
 }
 
@@ -56,13 +38,6 @@ label {
     width: fit-content;
 }
 
-.text_input {
-    width: 369px;
-    height: 50px;
-    background: #F2F2F2;
-    border-radius: 10px;
-    border: none;
-}
 
 #id_major {
     width: 369px;
@@ -76,26 +51,6 @@ label {
 .btns {
     width: fit-content;
     margin:50px auto;
-}
-
-.btn {
-    width: 250px;
-    height: 55px;
-
-    background: #FB8F1D;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 15px;
-
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 24px;
-    line-height: 27px;
-
-    text-align: center;
-
-    margin: 0 10px;
-    color: #FFFFFF;
 }
 
 .book_image_input {
@@ -123,10 +78,6 @@ label {
     border-radius: 10px;
 }
 
-input {
-    display: block;
-}
-
 textarea:focus {
     outline: none;
 }
@@ -140,27 +91,6 @@ input:focus {
     display: block;
 }
 
-
-form input::placeholder {
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 24px;
-    /* identical to box height */
-
-
-    color: #9C9C9C;
-}
-
-form input {
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 24px;
-    padding-left: 20px;
-}
 
 /* -------------------------------------------- */
 /* radio button customizing */
@@ -176,8 +106,6 @@ form input {
     -ms-user-select: none;
     user-select: none;
 
-    font-family: Inter;
-    font-style: normal;
     font-weight: normal;
     font-size: 16px;
 
@@ -341,8 +269,6 @@ form textarea::placeholder {
 }
 
 form textarea {
-    font-family: Inter;
-    font-style: normal;
     font-weight: 600;
     font-size: 20px;
     padding-top:12px;
@@ -357,8 +283,6 @@ form textarea {
 
 #free_label {
     display: inline-block;
-    font-family: Inter;
-    font-style: normal;
     font-weight: 500;
     font-size: 20px;
 
